--- a/source/_posts/前端必备的实用工具.md
+++ b/source/_posts/前端必备的实用工具.md
@@ -12,20 +12,20 @@ date: 2020-06-06 17:10:00
 
 ## 前端工具
 
-### 基本
+### 文档
 
 - [devdocs](https://devdocs.io/)：在线 API 文档，前端开发必备
 - [miniprogram](https://developers.weixin.qq.com/miniprogram/dev/framework/)：小程序 API 文档，小程序开发必备
 
 ### 图标
 
-- [iconfont](https://www.iconfont.cn/)
-- [css.gg](https://css.gg/app)
+- [iconfont](https://www.iconfont.cn/)：很全的SVG矢量图标
+- [css.gg](https://css.gg/app)：纯CSS实现的图标
 
 ### 颜色
 
-- [Flattastic Pro Color Palette](https://codepen.io/rodriguesmarcos/pen/CapmI)
-- [picular](https://picular.co)
+- [Flattastic Pro Color Palette](https://codepen.io/rodriguesmarcos/pen/CapmI)：非常好看的色板
+- [picular](https://picular.co)：配色界的Google
 
 ### 布局
 
@@ -33,16 +33,15 @@ date: 2020-06-06 17:10:00
 
 ### 动画
 
-- [easings.net](https://easings.net/)：缓动函数速查表
-- [cubic-bezier.com](https://cubic-bezier.com/)：缓动函数可视化
-- [perspective playground](https://codepen.io/mburakerman/pen/wrZKwe)：3D变换可视化
 - [animista](http://animista.net/)：现成动画大全
+- [perspective playground](https://codepen.io/mburakerman/pen/wrZKwe)：3D变换可视化
+- [cubic-bezier.com](https://cubic-bezier.com/)：缓动函数可视化
 
 ### 图形
 
-- [clippy](https://bennettfeely.com/clippy/)：自动生成`clip-path`图形
 - [fancy-border-radius](https://9elements.github.io/fancy-border-radius)：自动生成`border-radius`图形
 - [css-triangle-generator](http://apps.eky.hk/css-triangle-generator/)：自动生成三角形
+- [clippy](https://bennettfeely.com/clippy/)：自动生成`clip-path`图形
 
 ### 阴影
 
@@ -61,6 +60,5 @@ date: 2020-06-06 17:10:00
 
 - [loremipsum](https://loremipsum.io/)：文字占位符
 - [picsum](https://picsum.photos/)：图片占位符
-- [px2rpx](http://allan5.com/px2rpx/)：px/rpx转换
 - [carbon](https://carbon.now.sh/)：将代码片段转化为精美图片用于分享
 - [squoosh](https://squoosh.app/)：优化图片大小
