--- a/source/_posts/前端必备的实用工具.md
+++ b/source/_posts/前端必备的实用工具.md
@@ -51,6 +51,7 @@ date: 2020-06-06 17:10:00
 ### 渐变
 
 - [webgradients](https://webgradients.com/)：渐变色集合
+- [gradientfinder](http://gradientfinder.com/)：能从图片中提取出渐变
 
 ### SVG
 
