--- a/source/_posts/前端必备的实用工具.md
+++ b/source/_posts/前端必备的实用工具.md
@@ -65,3 +65,4 @@ date: 2020-06-06 17:10:00
 - [carbon](https://carbon.now.sh/)：将代码片段转化为精美图片用于分享
 - [squoosh](https://squoosh.app/)：优化图片大小
 - [remove.bg](https://www.remove.bg/)：去除图片背景
+- [bootcdn](https://www.bootcdn.cn/)：国内速度最快的cdn
