--- a/source/_posts/H5开发小结.md
+++ b/source/_posts/H5开发小结.md
@@ -15,15 +15,11 @@ date: 2020-08-10 16:55:00
 
 # 正文
 
-## 准备工作
+## 必备库
 
-```sh
-npm i kyouka
-```
+CSS：[aqua.sp](https://github.com/alphardex/aqua.sp)
 
-```js
-import ky from 'kyouka'
-```
+JS：[kyouka](https://github.com/alphardex/kyouka)
 
 ## 样式
 
@@ -31,13 +27,21 @@ import ky from 'kyouka'
 
 选择`vw`作为单位
 
-### 用滤镜后屏幕花掉
+### 防花屏
 
 开启`gpu`加速
 
 ```css
 transform: rotateZ(0);
 ```
+
+### 加载速度慢
+
+考虑压缩图片素材，[squoosh](https://squoosh.app/)和[腾讯智图](https://zhitu.isux.us/index.php/preview/download)皆可
+
+### 自定义字体
+
+用[fontmin](https://github.com/ecomfe/fontmin)生成字体再插入页面即可
 
 ## 业务
 
@@ -61,21 +65,26 @@ ky.disableTouchMove()
 
 分2种情况：
 
-1. 一般弹窗，用`sweetalert2`
+1. 一般弹窗，用[sweetalert2](https://github.com/sweetalert2/sweetalert2)
 2. 自定义弹窗，用`closeAllDialogMixin`
 
 ### 弹窗不显示域名
 
-用`sweetalert2`代替原生`alert`即可
+用[sweetalert2](https://github.com/sweetalert2/sweetalert2)代替原生`alert`即可
 
-### 加载速度慢
+### 判断用户是否已划到底部
 
-考虑压缩图片素材
+```js
+ky.isBottomVisible()
+```
 
 ## 注意点
 
 1. 发送请求后注意要同步更新页面上的数据
 2. 若提交数据时间过长（比如图片上传），则应在页面上加一个`loader`
-3. 展示型页面一定要注意文本的长度，过长则应截断（`.truncate`）
+3. 展示型页面一定要注意文本的长度，单行过长则应截断（`.truncate`），行数过多则做成滚动式（`.overflow-scroll`）
 4. 注意各个手机的适配，写完样式后在开发者工具里把每个手机都跑一遍，跑通后再真机测试
 5. 弹窗不能太大，至少没有设计稿里那么大
+6. 图片很多的列表页应采用懒加载（[lazyload](https://github.com/tuupola/lazyload)）
+7. 如果后端还没有完成接口，那么前端可以先用假数据进行模拟测试
+8. 写样式时除了公用组件外一律用工具类来写
