--- a/source/_posts/H5开发小结.md
+++ b/source/_posts/H5开发小结.md
@@ -78,6 +78,38 @@ ky.disableTouchMove()
 ky.isBottomVisible()
 ```
 
+### 同一个页面有多个带navigation的swiper实例冲突
+
+利用`vue`的计算属性动态生成`navigation`的`id`
+
+``` ts
+get swiperOptions () {
+  return {
+    navigation: {
+      nextEl: `#btn-next-${this.data.id}`,
+      prevEl: `#btn-prev-${this.data.id}`
+    }
+  }
+}
+```
+
+如果此时导航还是会被禁用，则强行重置其样式
+
+``` scss
+.swiper-button-disabled {
+  opacity: 1 !important;
+  pointer-events: auto !important;
+}
+```
+
+### 禁止点击元素的同时弹出提示弹窗
+
+新增一个透明元素覆盖在原先的元素上，在上面触发点击事件弹出弹窗即可
+
+### 无限下拉加载
+
+注意安卓机上会连续触发加载，用`_.debounce`
+
 ## 注意点
 
 1. 发送请求后注意要同步更新页面上的数据
@@ -88,3 +120,4 @@ ky.isBottomVisible()
 6. 图片很多的列表页应采用懒加载（[lazyload](https://github.com/tuupola/lazyload)）
 7. 如果后端还没有完成接口，那么前端可以先用假数据进行模拟测试
 8. 写样式时除了公用组件外一律用工具类来写
+9. 有的具有提交功能的元素必须等元素全部加载完才能显示
