--- a/source/_posts/H5开发小结.md
+++ b/source/_posts/H5开发小结.md
@@ -59,14 +59,14 @@ ky.disableTouchMove()
 
 ### 防止提交后再次发送请求
 
-动态绑定一个`disabled`属性即可
+动态绑定一个`pointer-events-none`类即可
 
 ### 弹窗点击空白处可关闭
 
 分2种情况：
 
 1. 一般弹窗，用[sweetalert2](https://github.com/sweetalert2/sweetalert2)
-2. 自定义弹窗，用`closeAllDialogMixin`
+2. 自定义弹窗，用`DialogMixin`
 
 ### 弹窗不显示域名
 
@@ -106,9 +106,10 @@ get swiperOptions () {
 
 新增一个透明元素覆盖在原先的元素上，在上面触发点击事件弹出弹窗即可
 
-### 无限下拉加载
+### 安卓机兼容无限下拉加载
 
-注意安卓机上会连续触发加载，用`_.debounce`
+- 不能在底部放绝对定位的图片，否则会影响高度计算，正确的做法是在加载完成后再显示图片
+- 注意安卓有虚拟键会导致划不到底，应该给触底条件添加一个容差
 
 ## 注意点
 
@@ -119,5 +120,4 @@ get swiperOptions () {
 5. 弹窗不能太大，至少没有设计稿里那么大
 6. 图片很多的列表页应采用懒加载（[lazyload](https://github.com/tuupola/lazyload)）
 7. 如果后端还没有完成接口，那么前端可以先用假数据进行模拟测试
-8. 写样式时除了公用组件外一律用工具类来写
-9. 有的具有提交功能的元素必须等元素全部加载完才能显示
+8. 有的具有提交功能的元素必须等元素全部加载完才能显示
