--- a/source/_posts/H5开发小结.md
+++ b/source/_posts/H5开发小结.md
@@ -111,6 +111,10 @@ get swiperOptions () {
 - 不能在底部放绝对定位的图片，否则会影响高度计算，正确的做法是在加载完成后再显示图片
 - 注意安卓有虚拟键会导致划不到底，应该给触底条件添加一个容差
 
+### ios 下 vue history mode 第二页分享失败
+
+注意ios会用第一页的链接来验证签名，因此跳转的链接也尽量以第一页为准
+
 ## 注意点
 
 1. 发送请求后注意要同步更新页面上的数据
