--- a/source/_posts/前端必备的实用工具.md
+++ b/source/_posts/前端必备的实用工具.md
@@ -22,13 +22,13 @@ date: 2020-06-06 17:10:00
 
 ### 图标
 
-- [iconfont](https://www.iconfont.cn/)：很全的 SVG 矢量图标
-- [css.gg](https://css.gg/app)：纯 CSS 实现的图标
+- [iconfont](https://www.iconfont.cn/)：很全的SVG矢量图标
+- [css.gg](https://css.gg/app)：纯CSS实现的图标
 
 ### 颜色
 
 - [Flattastic Pro Color Palette](https://codepen.io/rodriguesmarcos/pen/CapmI)：非常好看的色板
-- [picular](https://picular.co)：配色界的 Google
+- [picular](https://picular.co)：配色界的Google
 
 ### 布局
 
@@ -37,7 +37,7 @@ date: 2020-06-06 17:10:00
 ### 动画
 
 - [animista](http://animista.net/)：现成动画大全
-- [perspective playground](https://codepen.io/mburakerman/pen/wrZKwe)：3D 变换可视化
+- [perspective playground](https://codepen.io/mburakerman/pen/wrZKwe)：3D变换可视化
 - [cubic-bezier.com](https://cubic-bezier.com/)：缓动函数可视化
 
 ### 图形
@@ -57,8 +57,8 @@ date: 2020-06-06 17:10:00
 
 ### SVG
 
-- [URL-encoder for SVG](http://yoksel.github.io/url-encoder/)：用于创建内联 SVG
-- [SVGOMG](https://jakearchibald.github.io/svgomg/)：优化 SVG 大小
+- [URL-encoder for SVG](http://yoksel.github.io/url-encoder/)：用于创建内联SVG
+- [SVGOMG](https://jakearchibald.github.io/svgomg/)：优化SVG大小
 
 ### 其他
 
@@ -66,5 +66,7 @@ date: 2020-06-06 17:10:00
 - [picsum](https://picsum.photos/)：图片占位符
 - [carbon](https://carbon.now.sh/)：将代码片段转化为精美图片用于分享
 - [squoosh](https://squoosh.app/)：优化图片大小
+- [waifu2x](http://waifu2x.udp.jp/)：无损图片放大
 - [remove.bg](https://www.remove.bg/)：去除图片背景
 - [bootcdn](https://www.bootcdn.cn/)：国内速度最快的cdn
+- [json2ts](http://json2ts.com/)：将json转换为ts声明文件
