--- a/source/_posts/前端必备的实用工具.md
+++ b/source/_posts/前端必备的实用工具.md
@@ -72,3 +72,5 @@ date: 2020-06-06 17:10:00
 - [remove.bg](https://www.remove.bg/)：去除图片背景
 - [json2ts](http://json2ts.com/)：将 json 转换为 ts 声明文件
 - [babel.repl](https://www.babeljs.cn/repl)：在线转换 JS 代码兼容
+- [qrbtf](https://qrbtf.com/)：艺术二维码生成
+- [undraw](https://undraw.co/illustrations)：精美矢量插画
