--- a/source/_posts/前端必备的实用工具.md
+++ b/source/_posts/前端必备的实用工具.md
@@ -68,6 +68,7 @@ date: 2020-06-06 17:10:00
 - [picsum](https://picsum.photos/)：图片占位符
 - [carbon](https://carbon.now.sh/)：将代码片段转化为精美图片用于分享
 - [squoosh](https://squoosh.app/)：优化图片大小
+- [docsmall](https://docsmall.com/gif-compress)：在线压缩gif
 - [waifu2x](http://waifu2x.udp.jp/)：无损图片放大
 - [remove.bg](https://www.remove.bg/)：去除图片背景
 - [json2ts](http://json2ts.com/)：将 json 转换为 ts 声明文件
