--- a/source/_posts/H5开发小结.md
+++ b/source/_posts/H5开发小结.md
@@ -1,4 +1,3 @@
----
 title: H5 开发小结
 author: alphardex
 abbrlink: 50603
@@ -8,7 +7,6 @@ categories:
   - 前端
 date: 2020-08-10 16:55:00
 ---
-
 # 前言
 
 本文是我开发了许多 H5 活动后写下的小结
@@ -80,30 +78,6 @@ ky.disableTouchMove();
 ky.isBottomVisible();
 ```
 
-### 同一个页面有多个带 navigation 的 swiper 实例冲突
-
-利用`vue`的计算属性动态生成`navigation`的`id`
-
-```ts
-get swiperOptions () {
-  return {
-    navigation: {
-      nextEl: `#btn-next-${this.data.id}`,
-      prevEl: `#btn-prev-${this.data.id}`
-    }
-  }
-}
-```
-
-如果此时导航还是会被禁用，则强行重置其样式
-
-```scss
-.swiper-button-disabled {
-  opacity: 1 !important;
-  pointer-events: auto !important;
-}
-```
-
 ### 禁止点击元素的同时弹出提示弹窗
 
 新增一个透明元素覆盖在原先的元素上，在上面触发点击事件弹出弹窗即可
@@ -144,6 +118,16 @@ module.exports = {
       .end();
   },
 };
+```
+
+### vue 防止多个页面无线加载同时发请求
+
+切换到另一个页面后，别忘了移除上一个页面的scroll监听
+
+```js
+onUnmounted(() => {
+  window.removeEventListener("scroll", onScrollBottom);
+});
 ```
 
 ## 注意点
