--- a/source/_posts/前端必备的实用工具.md
+++ b/source/_posts/前端必备的实用工具.md
@@ -7,7 +7,6 @@ categories:
 abbrlink: 16823
 date: 2019-12-02 17:10:00
 ---
-
 工欲善其事，必先利其器。
 
 <!--more-->
@@ -42,12 +41,11 @@ date: 2019-12-02 17:10:00
 ### 图形
 
 - [fancy-border-radius](https://9elements.github.io/fancy-border-radius)：自动生成`border-radius`图形
-- [css-triangle-generator](http://apps.eky.hk/css-triangle-generator/)：自动生成三角形
 - [clippy](https://bennettfeely.com/clippy/)：自动生成`clip-path`图形
 
 ### 阴影
 
-- [shadows](https://brumm.af/shadows)：`box-shadow`阴影生成器
+- [shadows](https://brumm.af/shadows)：`box-shadow` 柔顺阴影生成器
 
 ### 渐变
 
@@ -60,9 +58,15 @@ date: 2019-12-02 17:10:00
 - [SVG Filters](https://yoksel.github.io/svg-filters/#/)：用于创建 SVG 滤镜效果
 - [SVG Gradient Map Filter](https://yoksel.github.io/svg-gradient-map/#/)：用于给图片创建 SVG 滤镜效果
 - [SVGOMG](https://jakearchibald.github.io/svgomg/)：优化 SVG 大小
+- [SVG Path Editor](https://yqnn.github.io/svg-path-editor/)：可视化编辑 SVG 路径
+
+### 滤镜
+
+- [Filter Generator](https://codepen.io/sosuke/pen/Pjoqqp)：根据颜色生成其对应的滤镜效果
 
 ### 其他
 
+- [three.js editor](https://threejs.org/editor/)：three.js 的在线编辑器
 - [loremipsum](https://loremipsum.io/)：文字占位符
 - [picsum](https://picsum.photos/)：图片占位符
 - [carbon](https://carbon.now.sh/)：将代码片段转化为精美图片用于分享
@@ -71,6 +75,10 @@ date: 2019-12-02 17:10:00
 - [waifu2x](http://waifu2x.udp.jp/)：无损图片放大
 - [remove.bg](https://www.remove.bg/)：去除图片背景
 - [json2ts](http://json2ts.com/)：将 json 转换为 ts 声明文件
-- [babel.repl](https://www.babeljs.cn/repl)：在线转换 JS 代码兼容
 - [qrbtf](https://qrbtf.com/)：艺术二维码生成
 - [undraw](https://undraw.co/illustrations)：精美矢量插画
+- [blobs](https://blobs.app/)：blob 图案生成
+- [Which key](https://which-key.netlify.app/)：查询键盘按键对应的号码
+- [font-face generator](https://transfonter.org/)：将字体文件转化成编码
+- [css-tricks](http://css-tricks.neatbang.com/)：很多实用的CSS工具
+- [caniuse](https://caniuse.com/)：兼容性查询
