--- a/source/_posts/H5开发小结.md
+++ b/source/_posts/H5开发小结.md
@@ -17,7 +17,7 @@ date: 2020-08-10 16:55:00
 
 ## 必备库
 
-CSS：[aqua.sp](https://github.com/alphardex/aqua.sp)
+CSS：[aqua.css](https://github.com/alphardex/aqua.css)
 
 JS：[kyouka](https://github.com/alphardex/kyouka)
 
@@ -66,11 +66,7 @@ ky.disableTouchMove();
 分 2 种情况：
 
 1. 一般弹窗，用[sweetalert2](https://github.com/sweetalert2/sweetalert2)
-2. 自定义弹窗，用`DialogMixin`
-
-### 弹窗不显示域名
-
-用[sweetalert2](https://github.com/sweetalert2/sweetalert2)代替原生`alert`即可
+2. 自定义弹窗，用`useDialog`钩子
 
 ### 判断用户是否已划到底部
 
@@ -126,7 +122,7 @@ module.exports = {
 
 ```js
 onUnmounted(() => {
-  window.removeEventListener("scroll", onScrollBottom);
+  window.removeEventListener("scroll", onReachBottom);
 });
 ```
 
@@ -138,6 +134,5 @@ onUnmounted(() => {
 4. 注意各个手机的适配，写完样式后在开发者工具里把每个手机都跑一遍，跑通后再真机测试
 5. 弹窗不能太大，至少没有设计稿里那么大
 6. 图片很多的列表页应采用懒加载（[lazyload](https://github.com/tuupola/lazyload)）
-7. 如果后端还没有完成接口，那么前端可以先用假数据进行模拟测试
+7. 如果后端还没有完成接口，那么前端可以先用假数据进行模拟测试（mock）
 8. 有的具有提交功能的元素必须等元素全部加载完才能显示
-9. 注意公司的文件编码（我司用的是 gbk），在开发完上线前别忘了转换一下
