--- a/source/_posts/H5开发小结.md
+++ b/source/_posts/H5开发小结.md
@@ -45,7 +45,7 @@ transform: rotateZ(0);
 
 ## 业务
 
-### ios 键盘弹出错位
+### ios 键盘弹出错位修复
 
 ```js
 ky.iosInputScrollFix();
@@ -83,40 +83,17 @@ ky.isBottomVisible();
 - 不能在底部放绝对定位的图片，否则会影响高度计算，正确的做法是在加载完成后再显示图片
 - 注意安卓有虚拟键会导致划不到底，应该给触底条件添加一个容差
 
-### ios 下 vue history mode 第二页分享失败
-
-注意 ios 会用第一页的链接来验证签名，因此跳转的链接也尽量以第一页为准
-
 ### 强制刷新缓存
 
 有的手机缓存不容易清除，此时就可以在文件后加后缀以清除缓存，例如`app.js?v=1`
 
 ### vue 项目将资源转移至 cdn
 
-目的：减少服务器压力
+在`.env.production`中配置cdn地址即可
 
-vue.config.js 配置如下
+注：像app.xxx.css这类要经常改动的文件不放在cdn上
 
-```js
-module.exports = {
-  chainWebpack: (config) => {
-    config.module
-      .rule("images")
-      .test(/\.(jpg|png|gif)$/)
-      .use("url-loader")
-      .loader("url-loader")
-      .options({
-        limit: 4096,
-        publicPath: process.env.NODE_ENV === "production" ? "<cdn-url>" : "./",
-        outputPath: "img",
-        name: "[name].[contenthash:8].[ext]",
-      })
-      .end();
-  },
-};
-```
-
-### vue 防止多个页面无线加载同时发请求
+### vue 防止多个页面无限加载同时发请求
 
 切换到另一个页面后，别忘了移除上一个页面的scroll监听
 
@@ -129,10 +106,8 @@ onUnmounted(() => {
 ## 注意点
 
 1. 发送请求后注意要同步更新页面上的数据
-2. 若提交数据时间过长（比如图片上传），则应在页面上加一个`loader`
+2. 若用户上传的图片太大，则用[Compressor](https://github.com/fengyuanchen/compressorjs)压缩图片后再上传
 3. 展示型页面一定要注意文本的长度，单行过长则应截断（`.truncate`），行数过多则做成滚动式（`.overflow-scroll`）
-4. 注意各个手机的适配，写完样式后在开发者工具里把每个手机都跑一遍，跑通后再真机测试
-5. 弹窗不能太大，至少没有设计稿里那么大
-6. 图片很多的列表页应采用懒加载（[lazyload](https://github.com/tuupola/lazyload)）
-7. 如果后端还没有完成接口，那么前端可以先用假数据进行模拟测试（mock）
-8. 有的具有提交功能的元素必须等元素全部加载完才能显示
+4. 图片很多的列表页应采用懒加载（[lazyload](https://github.com/tuupola/lazyload)）
+5. 注意各个手机的适配，写完样式后在开发者工具里把每个手机都跑一遍，跑通后再真机测试
+6. 如果后端还没有完成接口，那么前端可以先用假数据进行模拟测试（mock）
