--- a/source/_posts/H5开发小结.md
+++ b/source/_posts/H5开发小结.md
@@ -23,9 +23,13 @@ JS：[kyouka](https://github.com/alphardex/kyouka)
 
 ## 样式
 
-### 响应式单位
+### 端口适配
 
-选择`vw`作为单位
+移动端：`vw`
+
+pc端：`px`
+
+目前我适配两端的做法：将颜色等外观相关的属性放在一起，用媒体查询来隔开长度单位属性
 
 ### 防花屏
 
@@ -101,6 +105,12 @@ ky.isBottomVisible();
 onUnmounted(() => {
   window.removeEventListener("scroll", onReachBottom);
 });
+```
+
+### Date 最兼容的写法
+
+```js
+new Date("2020/12/19 00:00:00")
 ```
 
 ## 注意点
