--- a/source/_posts/H5开发小结.md
+++ b/source/_posts/H5开发小结.md
@@ -29,7 +29,7 @@ JS：[kyouka](https://github.com/alphardex/kyouka)
 
 pc端：`px`
 
-目前我适配两端的做法：将颜色等外观相关的属性放在一起，用媒体查询来隔开长度单位属性
+目前我适配两端的做法：将颜色等外观相关的属性放在一起，用媒体查询来隔开长度单位属性。小项目可以这么做，但大项目还是要写两套。
 
 ### 防花屏
 
@@ -41,7 +41,7 @@ transform: rotateZ(0);
 
 ### 加载速度慢
 
-考虑压缩图片素材，[squoosh](https://squoosh.app/)和[腾讯智图](https://zhitu.isux.us/index.php/preview/download)皆可
+考虑压缩图片素材，[squoosh](https://squoosh.app/)将不透明的png压缩成jpg，[onlineimagetool](https://www.onlineimagetool.com/zh/compress-png-jpg-webp-gif)批量压缩大小
 
 ### 自定义字体
 
@@ -55,32 +55,9 @@ transform: rotateZ(0);
 ky.iosInputScrollFix();
 ```
 
-### 禁止滚动
-
-```js
-ky.disableTouchMove();
-```
-
 ### 防止提交后再次发送请求
 
 动态绑定一个`pointer-events-none`类即可
-
-### 弹窗点击空白处可关闭
-
-分 2 种情况：
-
-1. 一般弹窗，用[sweetalert2](https://github.com/sweetalert2/sweetalert2)
-2. 自定义弹窗，用`useDialog`钩子
-
-### 判断用户是否已划到底部
-
-```js
-ky.isBottomVisible();
-```
-
-### 禁止点击元素的同时弹出提示弹窗
-
-新增一个透明元素覆盖在原先的元素上，在上面触发点击事件弹出弹窗即可
 
 ### 安卓机兼容无限下拉加载
 
@@ -97,9 +74,9 @@ ky.isBottomVisible();
 
 注：像app.xxx.css这类要经常改动的文件不放在cdn上
 
-### vue 防止多个页面无限加载同时发请求
+### vue 防止多个页面的事件重合
 
-切换到另一个页面后，别忘了移除上一个页面的scroll监听
+切换到另一个页面后，别忘了移除上一个页面的监听事件和定时器
 
 ```js
 onUnmounted(() => {
@@ -113,11 +90,19 @@ onUnmounted(() => {
 new Date("2020/12/19 00:00:00")
 ```
 
+### 跳转到外链后分享失效
+
+这个问题的发生时机在除首页外的其他页面，因此尽量将外链放首页
+
 ## 注意点
 
 1. 发送请求后注意要同步更新页面上的数据
 2. 若用户上传的图片太大，则用[Compressor](https://github.com/fengyuanchen/compressorjs)压缩图片后再上传
 3. 展示型页面一定要注意文本的长度，单行过长则应截断（`.truncate`），行数过多则做成滚动式（`.overflow-scroll`）
 4. 图片很多的列表页应采用懒加载（[lazyload](https://github.com/tuupola/lazyload)）
-5. 注意各个手机的适配，写完样式后在开发者工具里把每个手机都跑一遍，跑通后再真机测试
-6. 如果后端还没有完成接口，那么前端可以先用假数据进行模拟测试（mock）
+5. 如果后端还没有完成接口，那么前端可以先用假数据进行模拟测试（mock）
+6. 有些数据（比如活动的开始结束时间）不要写死，要读取后台，因为随时都有可能改动
+7. 分享助力类活动往往需要自定义分享标题，要提前问客户
+8. 切图尽量用2倍图，如果还不够清晰就用3倍图
+9. 抽奖码判断中奖时要加`includes`包含判断
+10. 海报生成为了避免出现底部多余的部分，应当固定好高度（通常是`ky.vw2px(210)`）
