--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -232,13 +232,10 @@ const sketch = (s: p5) => {
 ### 吸引体类
 
 ```ts
-class Attractor {
-  s: p5;
-  position: p5.Vector; // 位置
+class Attractor extends Particle {
   attractForceMag: number; // 吸引力大小
   constructor(s: p5, position = s.createVector(0, 0)) {
-    this.s = s;
-    this.position = position;
+    super(s, position);
     this.attractForceMag = 0.05;
   }
   // 显示
@@ -309,6 +306,8 @@ const sketch = (s: p5) => {
     // ps.applyForce(gravity);
     // attractor.display();
     // ps.applyAttractor(attractor);
+
+    // 吸引体吸引微粒
     attractors.forEach((attractor) => {
       attractor.display();
       ps.applyAttractor(attractor);
@@ -328,3 +327,9 @@ const sketch = (s: p5) => {
 ```
 
 [![hf573n.gif](https://z3.ax1x.com/2021/09/06/hf573n.gif)](https://imgtu.com/i/hf573n)
+
+### 吸引体相互吸引
+
+```ts
+
+```
