--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -273,7 +273,7 @@ const sketch = (s: p5) => {
 
     // const gravity = s.createVector(0, 0.05);
     // ps.applyForce(gravity);
-    attractor.display();
+    attractor.run();
     ps.applyAttractor(attractor);
 
     ...
@@ -304,12 +304,12 @@ const sketch = (s: p5) => {
 
     // const gravity = s.createVector(0, 0.05);
     // ps.applyForce(gravity);
-    // attractor.display();
+    // attractor.run();
     // ps.applyAttractor(attractor);
 
     // 吸引体吸引微粒
     attractors.forEach((attractor) => {
-      attractor.display();
+      attractor.run();
       ps.applyAttractor(attractor);
     });
 
@@ -331,5 +331,23 @@ const sketch = (s: p5) => {
 ### 吸引体相互吸引
 
 ```ts
+const sketch = (s: p5) => {
+  ...
+  const draw = () => {
+    ...
 
+    // 吸引体相互吸引
+    for (let i = 0; i < attractors.length; i++) {
+      for (let j = 0; j < attractors.length; j++) {
+        if (i !== j) {
+          attractors[j].applyAttractForce(attractors[i]);
+        }
+      }
+    }
+
+    ...
+  };
+};
 ```
+
+### 吸引体靠近时合并
