--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -350,4 +350,6 @@ const sketch = (s: p5) => {
 };
 ```
 
+[![hfvNjg.gif](https://z3.ax1x.com/2021/09/06/hfvNjg.gif)](https://imgtu.com/i/hfvNjg)
+
 ### 吸引体靠近时合并
