--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -336,11 +336,13 @@ const sketch = (s: p5) => {
   const draw = () => {
     ...
 
-    // 吸引体相互吸引
     for (let i = 0; i < attractors.length; i++) {
       for (let j = 0; j < attractors.length; j++) {
         if (i !== j) {
-          attractors[j].applyAttractForce(attractors[i]);
+          // 吸引体相互吸引
+          const attractorA = attractors[j];
+          const attractorB = attractors[i];
+          attractorA.applyAttractForce(attractorB);
         }
       }
     }
