--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -26,9 +26,11 @@ tags:
 class Particle {
   s: p5;
   position: p5.Vector; // 位置
+  lifespan: number; // 寿命
   constructor(s: p5, position = s.createVector(0, 0)) {
     this.s = s;
     this.position = position.copy();
+    this.lifespan = 1;
   }
   // 显示
   display() {
@@ -36,7 +38,9 @@ class Particle {
   }
   // 运行
   run() {
-    this.display();
+    if (this.lifespan) {
+      this.display();
+    }
   }
 }
 ```
@@ -151,8 +155,10 @@ class Particle {
   }
   // 运行
   run() {
-    this.update();
-    this.display();
+    if (this.lifespan) {
+      this.update();
+      this.display();
+    }
   }
 }
 
@@ -234,13 +240,17 @@ const sketch = (s: p5) => {
 ```ts
 class Attractor extends Particle {
   attractForceMag: number; // 吸引力大小
-  constructor(s: p5, position = s.createVector(0, 0)) {
+  radius: number; // 半径
+  diameter: number; // 直径
+  constructor(s: p5, position = s.createVector(0, 0), radius = 16) {
     super(s, position);
     this.attractForceMag = 0.05;
+    this.radius = radius;
+    this.diameter = radius * 2;
   }
   // 显示
   display() {
-    this.s.circle(this.position.x, this.position.y, 32);
+    this.s.circle(this.position.x, this.position.y, this.diameter);
   }
   // 施加引力
   applyAttractForce(p: Particle) {
