--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -241,16 +241,14 @@ const sketch = (s: p5) => {
 class Attractor extends Particle {
   attractForceMag: number; // 吸引力大小
   radius: number; // 半径
-  diameter: number; // 直径
   constructor(s: p5, position = s.createVector(0, 0), radius = 16) {
     super(s, position);
     this.attractForceMag = 0.05;
     this.radius = radius;
-    this.diameter = radius * 2;
   }
   // 显示
   display() {
-    this.s.circle(this.position.x, this.position.y, this.diameter);
+    this.s.circle(this.position.x, this.position.y, this.radius * 2);
   }
   // 施加引力
   applyAttractForce(p: Particle) {
