--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -26,11 +26,9 @@ tags:
 class Particle {
   s: p5;
   position: p5.Vector; // 位置
-  lifespan: number; // 寿命
   constructor(s: p5, position = s.createVector(0, 0)) {
     this.s = s;
     this.position = position.copy();
-    this.lifespan = 1;
   }
   // 显示
   display() {
@@ -38,9 +36,7 @@ class Particle {
   }
   // 运行
   run() {
-    if (this.lifespan) {
-      this.display();
-    }
+    this.display();
   }
 }
 ```
@@ -155,10 +151,8 @@ class Particle {
   }
   // 运行
   run() {
-    if (this.lifespan) {
-      this.update();
-      this.display();
-    }
+    this.update();
+    this.display();
   }
 }
 
@@ -241,10 +235,12 @@ const sketch = (s: p5) => {
 class Attractor extends Particle {
   attractForceMag: number; // 吸引力大小
   radius: number; // 半径
-  constructor(s: p5, position = s.createVector(0, 0), radius = 16) {
+  id: number; // id标识
+  constructor(s: p5, position = s.createVector(0, 0), radius = 16, id = 0) {
     super(s, position);
     this.attractForceMag = 0.05;
     this.radius = radius;
+    this.id = id;
   }
   // 显示
   display() {
@@ -298,6 +294,7 @@ const sketch = (s: p5) => {
   ...
   // let attractor: Attractor;
   let attractors: Attractor[] = [];
+  let currentAttractorId = 0;
   let mousePos: p5.Vector;
 
   const setup = () => {
@@ -325,8 +322,9 @@ const sketch = (s: p5) => {
   };
 
   const mousePressed = () => {
-    const attractor = new Attractor(s, mousePos);
+    const attractor = new Attractor(s, mousePos, 16, currentAttractorId);
     attractors.push(attractor);
+    currentAttractorId += 1;
   };
 
   ...
@@ -364,3 +362,37 @@ const sketch = (s: p5) => {
 [![hfvNjg.gif](https://z3.ax1x.com/2021/09/06/hfvNjg.gif)](https://imgtu.com/i/hfvNjg)
 
 ### 吸引体靠近时合并
+
+```ts
+const sketch = (s: p5) => {
+  ...
+  const draw = () => {
+    ...
+
+    for (let i = 0; i < attractors.length; i++) {
+      for (let j = 0; j < attractors.length; j++) {
+        if (i !== j) {
+          ...
+          // 靠的太近则吸引体A吸收吸引体B
+          const distAB = p5.Vector.dist(
+            attractorA.position,
+            attractorB.position
+          );
+          const distMin = (attractorA.radius + attractorB.radius) * 0.8;
+          const isNear = distAB < distMin;
+          if (isNear) {
+            attractorA.attractForceMag += attractorB.attractForceMag;
+            attractorA.radius += attractorB.radius;
+            attractors = attractors.filter(
+              (attractor) => attractor.id !== attractorB.id
+            );
+            attractorA.velocity = s.createVector(0, 0);
+          }
+        }
+      }
+    }
+
+    ...
+  };
+};
+```
