--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -396,3 +396,7 @@ const sketch = (s: p5) => {
   };
 };
 ```
+
+注意这里把 attractor 的 radius 调小了
+
+[![hh8llV.gif](https://z3.ax1x.com/2021/09/06/hh8llV.gif)](https://imgtu.com/i/hh8llV)
