--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -185,13 +185,16 @@ const sketch = (s: p5) => {
 class Particle {
   ...
   acceleration: p5.Vector; // 加速度
+  topSpeed: number; // 速度上限
   constructor(s: p5, position = s.createVector(0, 0)) {
     ...
     this.acceleration = this.s.createVector(0, 0);
+    this.topSpeed = 12;
   }
   // 更新状态
   update() {
     this.velocity.add(this.acceleration);
+    this.velocity.limit(this.topSpeed);
     this.position.add(this.velocity);
     this.acceleration.mult(0);
   }
@@ -400,3 +403,54 @@ const sketch = (s: p5) => {
 注意这里把 attractor 的 radius 调小了
 
 [![hh8llV.gif](https://z3.ax1x.com/2021/09/06/hh8llV.gif)](https://imgtu.com/i/hh8llV)
+
+### 吸引体半径超限后爆裂
+
+```ts
+class Attractor extends Particle {
+  ...
+  isCollasping: boolean; // 是否正在坍塌
+  isDead: boolean; // 是否坍塌完毕
+  static RADIUS_LIMIT = 100; // 半径上限
+  ...
+  constructor(s: p5, position = s.createVector(0, 0), radius = 16, id = 0) {
+    ...
+    this.isCollasping = false;
+    this.isDead = false;
+  }
+  // 坍塌
+  collapse() {
+    this.isCollasping = true;
+    this.radius *= 0.75;
+    if (this.radius < 1) {
+      this.isDead = true;
+    }
+  }
+}
+
+const sketch = (s: p5) => {
+  ...
+
+  const draw = () => {
+    ...
+
+    // 吸引体吸引微粒
+    attractors.forEach((attractor) => {
+      ...
+
+      // 半径超限后会坍塌
+      if (
+        attractor.radius >= Attractor.RADIUS_LIMIT ||
+        attractor.isCollasping
+      ) {
+        attractor.collapse();
+        if (attractor.isDead) {
+          attractors = attractors.filter((item) => item.id !== attractor.id);
+        }
+      }
+    });
+    ...
+  };
+  ...
+};
+```
