--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -404,7 +404,7 @@ const sketch = (s: p5) => {
 
 [![hh8llV.gif](https://z3.ax1x.com/2021/09/06/hh8llV.gif)](https://imgtu.com/i/hh8llV)
 
-### 吸引体半径超限后爆裂
+### 吸引体半径超限后坍塌
 
 ```ts
 class Attractor extends Particle {
