--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -367,6 +367,22 @@ const sketch = (s: p5) => {
 ### 吸引体靠近时合并
 
 ```ts
+class Attractor extends Particle {
+  // 是否跟另一个靠得很近
+  isNearAnother(attractor: Attractor) {
+    const distAB = p5.Vector.dist(this.position, attractor.position);
+    const distMin = (this.radius + attractor.radius) * 0.8;
+    const isNear = distAB < distMin;
+    return isNear;
+  }
+  // 吸收
+  absorb(attractor: Attractor) {
+    this.attractForceMag += attractor.attractForceMag;
+    this.radius += attractor.radius;
+    this.velocity = this.s.createVector(0, 0);
+  }
+}
+
 const sketch = (s: p5) => {
   ...
   const draw = () => {
@@ -375,21 +391,18 @@ const sketch = (s: p5) => {
     for (let i = 0; i < attractors.length; i++) {
       for (let j = 0; j < attractors.length; j++) {
         if (i !== j) {
-          ...
+          const attractorA = attractors[j];
+          const attractorB = attractors[i];
+
+          // 吸引体相互吸引
+          attractorA.applyAttractForce(attractorB);
+
           // 靠的太近则吸引体A吸收吸引体B
-          const distAB = p5.Vector.dist(
-            attractorA.position,
-            attractorB.position
-          );
-          const distMin = (attractorA.radius + attractorB.radius) * 0.8;
-          const isNear = distAB < distMin;
-          if (isNear) {
-            attractorA.attractForceMag += attractorB.attractForceMag;
-            attractorA.radius += attractorB.radius;
+          if (attractorA.isNearAnother(attractorB)) {
+            attractorA.absorb(attractorB);
             attractors = attractors.filter(
               (attractor) => attractor.id !== attractorB.id
             );
-            attractorA.velocity = s.createVector(0, 0);
           }
         }
       }
