--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -324,6 +324,7 @@ const sketch = (s: p5) => {
     ...
   };
 
+  // 每点击1次，添加1个吸引体
   const mousePressed = () => {
     const attractor = new Attractor(s, mousePos, 16, currentAttractorId);
     attractors.push(attractor);
@@ -388,6 +389,7 @@ const sketch = (s: p5) => {
   const draw = () => {
     ...
 
+    // 吸引体相互之间的动作
     for (let i = 0; i < attractors.length; i++) {
       for (let j = 0; j < attractors.length; j++) {
         if (i !== j) {
@@ -397,7 +399,7 @@ const sketch = (s: p5) => {
           // 吸引体相互吸引
           attractorA.applyAttractForce(attractorB);
 
-          // 靠的太近则吸引体A吸收吸引体B
+          // 两个吸引体靠的太近，则吸引体A吸收吸引体B
           if (attractorA.isNearAnother(attractorB)) {
             attractorA.absorb(attractorB);
             attractors = attractors.filter(
@@ -451,7 +453,7 @@ const sketch = (s: p5) => {
     attractors.forEach((attractor) => {
       ...
 
-      // 半径超限后会坍塌
+      // 当吸引体吸收过多微粒，半径超限后会坍塌
       if (
         attractor.radius >= Attractor.RADIUS_LIMIT ||
         attractor.isCollasping
