--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -526,3 +526,5 @@ const sketch = (s: p5) => {
   };
 };
 ```
+
+[![hoGXGQ.png](https://z3.ax1x.com/2021/09/07/hoGXGQ.png)](https://imgtu.com/i/hoGXGQ)
