--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -485,6 +485,7 @@ const sketch = (s: p5) => {
     c2: p5.Color,
     axis: number
   ) => {
+    s.strokeWeight(1);
     if (axis === 1) {
       // Top to bottom gradient
       for (let i = y; i <= y + h; i++) {
@@ -528,3 +529,41 @@ const sketch = (s: p5) => {
 ```
 
 [![hoGXGQ.png](https://z3.ax1x.com/2021/09/07/hoGXGQ.png)](https://imgtu.com/i/hoGXGQ)
+
+### 线条拖尾效果
+
+```ts
+class Particle {
+  ...
+  lastPosition: p5.Vector; // 上一个位置（用来创建延迟拖尾效果）
+  constructor(s: p5, position = s.createVector(0, 0)) {
+    ...
+    this.lastPosition = this.s.createVector(0, 0);
+  }
+  // 显示
+  display() {
+    // this.s.circle(this.position.x, this.position.y, 6);
+    this.s.fill(255);
+    this.s.stroke(255);
+    this.s.strokeWeight(2);
+    this.s.strokeJoin(this.s.ROUND);
+    this.s.strokeCap(this.s.ROUND);
+    this.s.line(
+      this.position.x,
+      this.position.y,
+      this.lastPosition.x,
+      this.lastPosition.y
+    );
+  }
+  // 更新状态
+  update() {
+    this.lastPosition = this.position.copy();
+    this.velocity.add(this.acceleration);
+    this.velocity.limit(this.topSpeed);
+    this.position.add(this.velocity);
+    this.acceleration.mult(0);
+  }
+}
+```
+
+[![hoIanA.gif](https://z3.ax1x.com/2021/09/07/hoIanA.gif)](https://imgtu.com/i/hoIanA)
