--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -564,6 +564,20 @@ class Particle {
     this.acceleration.mult(0);
   }
 }
+
+const sketch = (s: p5) => {
+  ...
+
+  const setup = () => {
+    const canvas = s.createCanvas(s.windowWidth, s.windowHeight);
+
+    // 场景半透明化，使线条的拖尾更加清晰
+    const ctx = (canvas as any).drawingContext as CanvasRenderingContext2D;
+    ctx.globalAlpha = 0.5;
+
+    ...
+  };
+};
 ```
 
 [![hoIanA.gif](https://z3.ax1x.com/2021/09/07/hoIanA.gif)](https://imgtu.com/i/hoIanA)
