--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -581,3 +581,41 @@ const sketch = (s: p5) => {
 ```
 
 [![hoIanA.gif](https://z3.ax1x.com/2021/09/07/hoIanA.gif)](https://imgtu.com/i/hoIanA)
+
+### 吸引体振荡效果
+
+```ts
+class Attractor extends Particle {
+  ...
+  oscillatingRadius: number; // 波动半径
+  constructor(s: p5, position = s.createVector(0, 0), radius = 16, id = 0) {
+    ...
+    this.oscillatingRadius = 0;
+  }
+  // 显示
+  display() {
+    this.s.blendMode(this.s.BLEND);
+    this.s.stroke(0);
+    this.s.fill("#000000");
+    this.oscillate();
+    this.s.circle(this.position.x, this.position.y, this.oscillatingRadius * 2);
+  }
+  // 振荡
+  oscillate() {
+    const oscillatingRadius = this.s.map(
+      this.s.sin(this.s.frameCount / 6) * 2,
+      -1,
+      1,
+      this.radius * 0.8,
+      this.radius
+    );
+    this.oscillatingRadius = oscillatingRadius;
+  }
+}
+```
+
+[![hTeu79.gif](https://z3.ax1x.com/2021/09/07/hTeu79.gif)](https://imgtu.com/i/hTeu79)
+
+## 项目地址
+
+[Attractor Particle System](https://codepen.io/alphardex/pen/WNOoWWg)
