--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -10,6 +10,10 @@ tags:
 
 大家好，这里是 CSS 兼 WebGL 魔法使——alphardex。
 
+以下是最终实现的效果图
+
+[![hTmZCt.gif](https://z3.ax1x.com/2021/09/07/hTmZCt.gif)](https://imgtu.com/i/hTmZCt)
+
 让我们开始吧！
 
 <!--more-->
