--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -1,4 +1,4 @@
-title: 平凡粒子造就特效最强
+title: 平凡微粒造就特效最强
 author: alphardex
 abbrlink: 64108
 date: 2021-09-04 20:30:53
@@ -24,7 +24,9 @@ tags:
 
 ## 创作开始
 
-### 粒子类
+### 微粒类
+
+在某个位置画一个圆点，就这么简单~
 
 ```ts
 class Particle {
@@ -45,7 +47,9 @@ class Particle {
 }
 ```
 
-### 粒子系统类
+### 微粒系统类
+
+多画几个点，把它们存到数组里，就成了所谓的微粒系统
 
 ```ts
 class ParticleSystem {
@@ -77,7 +81,9 @@ class ParticleSystem {
 }
 ```
 
-### 创建粒子
+### 创建微粒
+
+在画面上画上 100 个微粒
 
 ```ts
 const sketch = (s: p5) => {
@@ -107,9 +113,11 @@ const sketch = (s: p5) => {
 
 [![hfRxqe.png](https://z3.ax1x.com/2021/09/06/hfRxqe.png)](https://imgtu.com/i/hfRxqe)
 
-100 个粒子重叠在了画面中央
+100 个微粒都重叠在了画面中央，位置应该打乱一下
 
-### 打乱粒子位置
+### 打乱微粒位置
+
+给所有微粒赋予随机的坐标即可
 
 ```ts
 class ParticleSystem {
@@ -137,9 +145,11 @@ const sketch = (s: p5) => {
 
 [![hfWQGq.png](https://z3.ax1x.com/2021/09/06/hfWQGq.png)](https://imgtu.com/i/hfWQGq)
 
-100 个粒子分散在了画面各处
+100 个微粒分散在了画面各处
 
-### 粒子漫游
+### 微粒漫游
+
+全部静止肯定不行，给它们一个随机的速度，就能动起来了
 
 ```ts
 class Particle {
@@ -183,7 +193,13 @@ const sketch = (s: p5) => {
 };
 ```
 
-### 对粒子施加力
+此时微粒会在画面上四处飘动
+
+### 对微粒施加力
+
+物理课上老师教过我们，力能改变物体的运动状态，根据牛二定律，我们能给物体施加一个力，增加物体的加速度，从而增加物体的速度
+
+尝试让微粒受重力的影响下落
 
 ```ts
 class Particle {
@@ -237,6 +253,8 @@ const sketch = (s: p5) => {
 [![hfhjMV.gif](https://z3.ax1x.com/2021/09/06/hfhjMV.gif)](https://imgtu.com/i/hfhjMV)
 
 ### 吸引体类
+
+新增一个 Attractor 类，负责对微粒施加吸引力，这样微粒就都会朝它那边跑了
 
 ```ts
 class Attractor extends Particle {
@@ -296,6 +314,8 @@ const sketch = (s: p5) => {
 
 ### 点击添加吸引体
 
+通过点击鼠标，我们能在画面上动态添加吸引体
+
 ```ts
 const sketch = (s: p5) => {
   ...
@@ -344,6 +364,8 @@ const sketch = (s: p5) => {
 
 ### 吸引体相互吸引
 
+如果吸引体之前也能相互吸引，那就更有趣了
+
 ```ts
 const sketch = (s: p5) => {
   ...
@@ -370,6 +392,8 @@ const sketch = (s: p5) => {
 [![hfvNjg.gif](https://z3.ax1x.com/2021/09/06/hfvNjg.gif)](https://imgtu.com/i/hfvNjg)
 
 ### 吸引体靠近时合并
+
+光吸引是不够的，不如直接合体
 
 ```ts
 class Attractor extends Particle {
@@ -425,6 +449,8 @@ const sketch = (s: p5) => {
 
 ### 吸引体半径超限后坍塌
 
+如果一不小心合得太多怎么办？就让它当场坍塌爆炸，boom shakalaka！
+
 ```ts
 class Attractor extends Particle {
   ...
@@ -475,6 +501,8 @@ const sketch = (s: p5) => {
 ```
 
 ### 设置渐变背景色
+
+画面黑色背景太单调了，设置个美丽的渐变色吧
 
 ```ts
 const sketch = (s: p5) => {
@@ -536,6 +564,8 @@ const sketch = (s: p5) => {
 
 ### 线条拖尾效果
 
+记录微粒运动的上一个位置，并且与当前位置相连，就能得到拖尾轨迹
+
 ```ts
 class Particle {
   ...
@@ -587,6 +617,8 @@ const sketch = (s: p5) => {
 [![hoIanA.gif](https://z3.ax1x.com/2021/09/07/hoIanA.gif)](https://imgtu.com/i/hoIanA)
 
 ### 吸引体振荡效果
+
+通过`sin`正弦函数，我们能让吸引体的大小有规律地振荡起来
 
 ```ts
 class Attractor extends Particle {
