--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -364,7 +364,7 @@ const sketch = (s: p5) => {
 
 ### 吸引体相互吸引
 
-如果吸引体之前也能相互吸引，那就更有趣了
+如果吸引体之间也能相互吸引，那就更有趣了
 
 ```ts
 const sketch = (s: p5) => {
@@ -393,7 +393,7 @@ const sketch = (s: p5) => {
 
 ### 吸引体靠近时合并
 
-光吸引是不够的，不如直接合体
+但光吸引肯定是不够的，不如试着让它们大鱼吃小鱼般地融合起来呢？
 
 ```ts
 class Attractor extends Particle {
