--- a/source/_posts/平凡粒子造就特效最强.md
+++ b/source/_posts/平凡粒子造就特效最强.md
@@ -193,6 +193,8 @@ const sketch = (s: p5) => {
 };
 ```
 
+[![hTMJwF.gif](https://z3.ax1x.com/2021/09/07/hTMJwF.gif)](https://imgtu.com/i/hTMJwF)
+
 此时微粒会在画面上四处飘动
 
 ### 对微粒施加力
@@ -372,6 +374,7 @@ const sketch = (s: p5) => {
   const draw = () => {
     ...
 
+    // 吸引体相互之间的动作
     for (let i = 0; i < attractors.length; i++) {
       for (let j = 0; j < attractors.length; j++) {
         if (i !== j) {
@@ -499,6 +502,8 @@ const sketch = (s: p5) => {
   ...
 };
 ```
+
+[![hTMxXV.gif](https://z3.ax1x.com/2021/09/07/hTMxXV.gif)](https://imgtu.com/i/hTMxXV)
 
 ### 设置渐变背景色
 
