--- a/source/_posts/手把手带你玩转有趣的粒子特效.md
+++ b/source/_posts/手把手带你玩转有趣的粒子特效.md
@@ -10,6 +10,8 @@ tags:
 
 大家好，这里是 CSS 兼 WebGL 魔法使——alphardex。
 
+之前在练习写粒子特效的时候发现有些特效的实现跟物理知识有很大的关系（比如烟花特效），后来又碰巧发现了一本神书——[The Nature of Code](https://book.douban.com/subject/26264736/)，它教你如何运用物理数学知识来模拟实现一些自然界的特效，读完后我的创作之魂被彻底激发，于是就有了这篇文章，它将带你实现一个由物理驱动的粒子特效。
+
 以下是最终实现的效果图
 
 [![hTmZCt.gif](https://z3.ax1x.com/2021/09/07/hTmZCt.gif)](https://imgtu.com/i/hTmZCt)
