--- a/source/_posts/一个孤独中二患者的自白.md
+++ b/source/_posts/一个孤独中二患者的自白.md
@@ -2,8 +2,7 @@ title: 一个孤独中二患者的自白
 author: alphardex
 abbrlink: 35620
 tags: []
-categories:
-  - 自传
+categories: []
 date: 2020-01-01 19:37:00
 ---
 大家好，欢迎来到CSS中二魔法使alphardex的领域🙌!
