--- a/source/_posts/前端必备的实用工具.md
+++ b/source/_posts/前端必备的实用工具.md
@@ -1,9 +1,7 @@
 title: 前端必备的实用工具
 author: alphardex
-tags:
-  - Tools
-categories:
-  - 前端
+tags: []
+categories: []
 abbrlink: 16823
 date: 2019-12-02 17:10:00
 ---
