--- a/source/_posts/在轮播图里寻求新颖是不是搞错了什么.md
+++ b/source/_posts/在轮播图里寻求新颖是不是搞错了什么.md
@@ -1,11 +1,8 @@
 title: 在轮播图里寻求新颖是不是搞错了什么
 author: alphardex
 abbrlink: 47726
-tags:
-  - CSS
-  - JavaScript
-categories:
-  - 前端
+tags: []
+categories: []
 date: 2021-01-12 08:23:00
 ---
 ## 前言
