--- a/source/_posts/H5开发小结.md
+++ b/source/_posts/H5开发小结.md
@@ -1,10 +1,8 @@
 title: H5 开发小结
 author: alphardex
 abbrlink: 50603
-tags:
-  - Summary
-categories:
-  - 前端
+tags: []
+categories: []
 date: 2020-08-10 16:55:00
 ---
 # 前言
