--- a/source/_posts/尝试实现了这个跨窗口的粒子动画.md
+++ b/source/_posts/尝试实现了这个跨窗口的粒子动画.md
@@ -3,7 +3,9 @@ author: alphardex
 abbrlink: 2819
 date: 2023-11-27 16:25:16
 tags:
+
 ---
+
 相信大家已经被这个粒子动画给刷屏了吧：
 
 ![bcab9963-4461-4964-96a0-214a15626f75](https://s2.loli.net/2023/11/27/uvFLrXDKYHa1Ppl.png)
@@ -241,6 +243,28 @@ void main(){
 ```
 
 ![fd7f556a-3652-d64f-3b53-a4d3708e9b58_(1)](https://s2.loli.net/2023/11/27/TPxjFsiYdER1w8L.gif)
+
+此外，我们可以做一个拉伸球的动画，用作后面纠缠动画的基础，思路如下：定义一个牵引点，用`sdf`函数算出牵引距离，再求得牵引方向向量，给位置变量应用它们的乘积即可。
+
+```glsl
+#include "/node_modules/lygia/sdf/boxSDF.glsl"
+
+void main(){
+    vec2 uv=gl_FragCoord.xy/resolution.xy;
+
+    ...
+
+    vec3 attract=uAttract;
+    float attractX=abs(attract.x);
+    float d=boxSDF(col-attract,vec3(attractX,.25,.25));
+    vec3 dir=normalize(col-attract);
+    col-=dir*smoothstep(.2,.0,d)*(attractX-1.);
+
+    gl_FragColor=vec4(col,1.);
+}
+```
+
+![Shader项目模板_(1)](https://s2.loli.net/2023/11/27/NDxVZtEcwkzean4.gif)
 
 ## 最后
 
