--- a/source/_posts/尝试实现了这个跨窗口的粒子动画.md
+++ b/source/_posts/尝试实现了这个跨窗口的粒子动画.md
@@ -6,11 +6,13 @@ tags:
 
 ---
 
-相信大家已经被这个粒子动画给刷屏了吧：
+相信不久前大家已经被这个粒子动画给刷屏了吧：
 
 ![bcab9963-4461-4964-96a0-214a15626f75](https://s2.loli.net/2023/11/27/uvFLrXDKYHa1Ppl.png)
 
-它的具体来源就不多说了。之前看过很多文章都在分析这个跨窗口通信的技术，但是呢，我却没有看到有人把这个粒子效果给复现出来的。于是乎，我花了一整个周末，把这个粒子特效给肝了出来。尽管可能跟原特效相比有一点差距，但也表明了这种效果是可以被实现的。
+之前看过很多人都在分析跟这个效果相关的跨窗口通信技术，尽管这样是挺好，但我依旧有点纳闷：为什么没有人讲讲背后的粒子特效是怎么实现的呢？
+
+于是乎，我花了一整个周末，把这个粒子特效给肝了出来。尽管可能跟原特效相比有一点差距，但也表明了这种效果是可以实现的。
 
 ![entangled](https://s2.loli.net/2023/11/27/KqNm5ITYWidblpH.gif)
 
@@ -266,11 +268,16 @@ void main(){
 
 ![Shader项目模板_(1)](https://s2.loli.net/2023/11/27/NDxVZtEcwkzean4.gif)
 
+至于两球相互纠缠，emmmm，说实话我直接用了原作者[开源的项目](https://github.com/bgstaal/multipleWindow3dScene)里的`WindowManager`来实现的，最终结果就是文章开头的那个动画。
+
 ## 最后
 
-粒子效果本身差不多就这样完成了。之后就是两球相互纠缠的动画，这个实现起来感觉是最有难度的，老实说我自己的那个版本的纠缠动画有一点生硬，并不像原效果里的那么丝滑、自然，也许是功夫还不到家吧，哈哈。
+粒子效果本身差不多就这样完成了。还有一些待优化的点：
 
-以后会继续努力改进的~
+1. 不用卷曲噪声“逃课”，用更加精美的扭曲方式来美化球体。
+2. 纠缠动画有一点生硬，并不像原效果那样丝滑、连贯。
+
+主要还是第 2 点吧，感觉原作者是用了一种特定的算法来实现的，只可惜我不会 QAQ，还得继续努力呢~
 
 ## 源码
 
