--- a/source/_posts/H5开发小结.md
+++ b/source/_posts/H5开发小结.md
@@ -4,7 +4,9 @@ abbrlink: 50603
 tags: []
 categories: []
 date: 2020-08-10 16:55:00
+
 ---
+
 # 前言
 
 本文是我开发了许多 H5 活动后写下的小结
@@ -25,7 +27,7 @@ JS：[kyouka](https://github.com/alphardex/kyouka)
 
 移动端：`vw`
 
-pc端：`px`
+pc 端：`px`
 
 目前我适配两端的做法：将颜色等外观相关的属性放在一起，用媒体查询来隔开长度单位属性。小项目可以这么做，但大项目还是要写两套。
 
@@ -39,7 +41,7 @@ transform: rotateZ(0);
 
 ### 加载速度慢
 
-考虑压缩图片素材，[squoosh](https://squoosh.app/)将不透明的png压缩成jpg，[onlineimagetool](https://www.onlineimagetool.com/zh/compress-png-jpg-webp-gif)批量压缩大小
+考虑压缩图片素材，[squoosh](https://squoosh.app/)将不透明的 png 压缩成 jpg，[onlineimagetool](https://www.onlineimagetool.com/zh/compress-png-jpg-webp-gif)批量压缩大小
 
 ### 自定义字体
 
@@ -68,9 +70,9 @@ ky.iosInputScrollFix();
 
 ### vue 项目将资源转移至 cdn
 
-在`.env.production`中配置cdn地址即可
+在`.env.production`中配置 cdn 地址即可
 
-注：像app.xxx.css这类要经常改动的文件不放在cdn上
+注：像 app.xxx.css 这类要经常改动的文件不放在 cdn 上
 
 ### vue 防止多个页面的事件重合
 
@@ -85,7 +87,7 @@ onUnmounted(() => {
 ### Date 最兼容的写法
 
 ```js
-new Date("2020/12/19 00:00:00")
+new Date("2020/12/19 00:00:00");
 ```
 
 ### 跳转到外链后分享失效
@@ -101,6 +103,6 @@ new Date("2020/12/19 00:00:00")
 5. 如果后端还没有完成接口，那么前端可以先用假数据进行模拟测试（mock）
 6. 有些数据（比如活动的开始结束时间）不要写死，要读取后台，因为随时都有可能改动
 7. 分享助力类活动往往需要自定义分享标题，要提前问客户
-8. 切图尽量用2倍图，如果还不够清晰就用3倍图
+8. 切图尽量用 2 倍图，如果还不够清晰就用 3 倍图
 9. 抽奖码判断中奖时要加`includes`包含判断
 10. 海报生成为了避免出现底部多余的部分，应当固定好高度（通常是`ky.vw2px(210)`）
