--- a/source/_posts/手把手带你玩转有趣的粒子特效.md
+++ b/source/_posts/手把手带你玩转有趣的粒子特效.md
@@ -15,7 +15,7 @@ date: 2021-09-04 20:30:00
 
 以下是最终实现的效果图
 
-[![hTmZCt.gif](https://z3.ax1x.com/2021/09/07/hTmZCt.gif)](https://imgtu.com/i/hTmZCt)
+[![hTmZCt.gif](https://z3.ax1x.com/2021/09/07/hTmZCt.gif)](https://imgse.com/i/hTmZCt)
 
 让我们开始吧！
 
@@ -114,7 +114,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hfRxqe.png](https://z3.ax1x.com/2021/09/06/hfRxqe.png)](https://imgtu.com/i/hfRxqe)
+[![hfRxqe.png](https://z3.ax1x.com/2021/09/06/hfRxqe.png)](https://imgse.com/i/hfRxqe)
 
 100 个微粒都重叠在了画面中央，位置应该打乱一下
 
@@ -146,7 +146,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hfWQGq.png](https://z3.ax1x.com/2021/09/06/hfWQGq.png)](https://imgtu.com/i/hfWQGq)
+[![hfWQGq.png](https://z3.ax1x.com/2021/09/06/hfWQGq.png)](https://imgse.com/i/hfWQGq)
 
 100 个微粒分散在了画面各处
 
@@ -196,7 +196,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hTMJwF.gif](https://z3.ax1x.com/2021/09/07/hTMJwF.gif)](https://imgtu.com/i/hTMJwF)
+[![hTMJwF.gif](https://z3.ax1x.com/2021/09/07/hTMJwF.gif)](https://imgse.com/i/hTMJwF)
 
 此时微粒会在画面上四处飘动
 
@@ -255,7 +255,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hfhjMV.gif](https://z3.ax1x.com/2021/09/06/hfhjMV.gif)](https://imgtu.com/i/hfhjMV)
+[![hfhjMV.gif](https://z3.ax1x.com/2021/09/06/hfhjMV.gif)](https://imgse.com/i/hfhjMV)
 
 ### 吸引体类
 
@@ -315,7 +315,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hf4jfA.gif](https://z3.ax1x.com/2021/09/06/hf4jfA.gif)](https://imgtu.com/i/hf4jfA)
+[![hf4jfA.gif](https://z3.ax1x.com/2021/09/06/hf4jfA.gif)](https://imgse.com/i/hf4jfA)
 
 ### 点击添加吸引体
 
@@ -365,7 +365,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hf573n.gif](https://z3.ax1x.com/2021/09/06/hf573n.gif)](https://imgtu.com/i/hf573n)
+[![hf573n.gif](https://z3.ax1x.com/2021/09/06/hf573n.gif)](https://imgse.com/i/hf573n)
 
 ### 吸引体相互吸引
 
@@ -395,7 +395,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hfvNjg.gif](https://z3.ax1x.com/2021/09/06/hfvNjg.gif)](https://imgtu.com/i/hfvNjg)
+[![hfvNjg.gif](https://z3.ax1x.com/2021/09/06/hfvNjg.gif)](https://imgse.com/i/hfvNjg)
 
 ### 吸引体靠近时合并
 
@@ -451,7 +451,7 @@ const sketch = (s: p5) => {
 
 注意这里把 attractor 的 radius 调小了
 
-[![hh8llV.gif](https://z3.ax1x.com/2021/09/06/hh8llV.gif)](https://imgtu.com/i/hh8llV)
+[![hh8llV.gif](https://z3.ax1x.com/2021/09/06/hh8llV.gif)](https://imgse.com/i/hh8llV)
 
 ### 吸引体半径超限后坍塌
 
@@ -506,7 +506,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hTMxXV.gif](https://z3.ax1x.com/2021/09/07/hTMxXV.gif)](https://imgtu.com/i/hTMxXV)
+[![hTMxXV.gif](https://z3.ax1x.com/2021/09/07/hTMxXV.gif)](https://imgse.com/i/hTMxXV)
 
 ### 设置渐变背景色
 
@@ -568,7 +568,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hoGXGQ.png](https://z3.ax1x.com/2021/09/07/hoGXGQ.png)](https://imgtu.com/i/hoGXGQ)
+[![hoGXGQ.png](https://z3.ax1x.com/2021/09/07/hoGXGQ.png)](https://imgse.com/i/hoGXGQ)
 
 ### 线条拖尾效果
 
@@ -622,7 +622,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hoIanA.gif](https://z3.ax1x.com/2021/09/07/hoIanA.gif)](https://imgtu.com/i/hoIanA)
+[![hoIanA.gif](https://z3.ax1x.com/2021/09/07/hoIanA.gif)](https://imgse.com/i/hoIanA)
 
 ### 吸引体振荡效果
 
@@ -658,7 +658,7 @@ class Attractor extends Particle {
 }
 ```
 
-[![hTeu79.gif](https://z3.ax1x.com/2021/09/07/hTeu79.gif)](https://imgtu.com/i/hTeu79)
+[![hTeu79.gif](https://z3.ax1x.com/2021/09/07/hTeu79.gif)](https://imgse.com/i/hTeu79)
 
 ## 项目地址
 
