--- a/source/_posts/手把手带你玩转有趣的粒子特效.md
+++ b/source/_posts/手把手带你玩转有趣的粒子特效.md
@@ -15,7 +15,7 @@ date: 2021-09-04 20:30:00
 
 以下是最终实现的效果图
 
-[![hTmZCt.gif](https://z3.ax1x.com/2021/09/07/hTmZCt.gif)](https://imgse.com/i/hTmZCt)
+![hTmZCt.gif](https://s2.loli.net/2024/05/22/viNueEcoQnrbytV.gif)
 
 让我们开始吧！
 
@@ -114,7 +114,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hfRxqe.png](https://z3.ax1x.com/2021/09/06/hfRxqe.png)](https://imgse.com/i/hfRxqe)
+![hfRxqe.png](https://s2.loli.net/2024/05/22/whuIHEvenySTWda.png)
 
 100 个微粒都重叠在了画面中央，位置应该打乱一下
 
@@ -146,7 +146,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hfWQGq.png](https://z3.ax1x.com/2021/09/06/hfWQGq.png)](https://imgse.com/i/hfWQGq)
+![hfWQGq.png](https://s2.loli.net/2024/05/22/vCkbmUVeaY7hqgP.png)
 
 100 个微粒分散在了画面各处
 
@@ -196,7 +196,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hTMJwF.gif](https://z3.ax1x.com/2021/09/07/hTMJwF.gif)](https://imgse.com/i/hTMJwF)
+![hTMJwF.gif](https://s2.loli.net/2024/05/22/UnjzJKQMC8NrPL1.gif)
 
 此时微粒会在画面上四处飘动
 
@@ -255,7 +255,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hfhjMV.gif](https://z3.ax1x.com/2021/09/06/hfhjMV.gif)](https://imgse.com/i/hfhjMV)
+![hfhjMV.gif](https://s2.loli.net/2024/05/22/L38NPsh9GDcSOVK.gif)
 
 ### 吸引体类
 
@@ -315,7 +315,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hf4jfA.gif](https://z3.ax1x.com/2021/09/06/hf4jfA.gif)](https://imgse.com/i/hf4jfA)
+![hf4jfA.gif](https://s2.loli.net/2024/05/22/yJ2Y1poh3rbkjIT.gif)
 
 ### 点击添加吸引体
 
@@ -365,7 +365,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hf573n.gif](https://z3.ax1x.com/2021/09/06/hf573n.gif)](https://imgse.com/i/hf573n)
+![hf573n.gif](https://s2.loli.net/2024/05/22/BpTvO3iFQruA1eb.gif)
 
 ### 吸引体相互吸引
 
@@ -395,7 +395,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hfvNjg.gif](https://z3.ax1x.com/2021/09/06/hfvNjg.gif)](https://imgse.com/i/hfvNjg)
+![hfvNjg.gif](https://s2.loli.net/2024/05/22/ImFqZfcDHPCSBKU.gif)
 
 ### 吸引体靠近时合并
 
@@ -451,7 +451,7 @@ const sketch = (s: p5) => {
 
 注意这里把 attractor 的 radius 调小了
 
-[![hh8llV.gif](https://z3.ax1x.com/2021/09/06/hh8llV.gif)](https://imgse.com/i/hh8llV)
+![hh8llV.gif](https://s2.loli.net/2024/05/22/6VG9qyrhBXwPCp1.gif)
 
 ### 吸引体半径超限后坍塌
 
@@ -506,7 +506,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hTMxXV.gif](https://z3.ax1x.com/2021/09/07/hTMxXV.gif)](https://imgse.com/i/hTMxXV)
+![hTMxXV.gif](https://s2.loli.net/2024/05/22/eV9NWkA5Gax4p8Z.gif)
 
 ### 设置渐变背景色
 
@@ -568,7 +568,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hoGXGQ.png](https://z3.ax1x.com/2021/09/07/hoGXGQ.png)](https://imgse.com/i/hoGXGQ)
+![hoGXGQ.png](https://s2.loli.net/2024/05/22/mjoZrhCLiSNqdOB.png)
 
 ### 线条拖尾效果
 
@@ -622,7 +622,7 @@ const sketch = (s: p5) => {
 };
 ```
 
-[![hoIanA.gif](https://z3.ax1x.com/2021/09/07/hoIanA.gif)](https://imgse.com/i/hoIanA)
+![hoIanA.gif](https://s2.loli.net/2024/05/22/QaBm7RfTcYLXd34.gif)
 
 ### 吸引体振荡效果
 
@@ -658,7 +658,7 @@ class Attractor extends Particle {
 }
 ```
 
-[![hTeu79.gif](https://z3.ax1x.com/2021/09/07/hTeu79.gif)](https://imgse.com/i/hTeu79)
+![hTeu79.gif](https://s2.loli.net/2024/05/22/Pd53UeGXkRlBjwn.gif)
 
 ## 项目地址
 
